--- a/localisation/TD_01_flavour_liemarian_l_english.yml
+++ b/localisation/TD_01_flavour_liemarian_l_english.yml
@@ -178,16 +178,16 @@
  liemarian.203.b: "There are more important matters at hand."
 
  liemarian.204.t: "End of the Coalition War"
- liemarian.204.desc: "After painful and long sessions of negotiating, the major players of the conflict have finally agreed on a peace treaty and the neverending coalition war has finally reached a conclusion.\n\nThe unexpected imperial victory has caused a turmoil in Liemarian states, while the emperor is preparing his triumphant march across the [Emperor.Capital.GetName]. Once rebellious subjects have been forced to return to follow the only true rite.\n\nWhile some people expect the imperial prosperity not to last long, one thing is certain - a balance of power has once again shiften in Mysentria."
+ liemarian.204.desc: "After painful and long sessions of negotiating, the major players of the conflict have finally agreed on a peace treaty and the neverending coalition war has finally reached a conclusion.\nThe unexpected imperial victory has caused a turmoil in Liemarian states, while the emperor is preparing his triumphant march across the [Emperor.Capital.GetName]. Once rebellious subjects have been forced to return to follow the only true rite.\nWhile some people expect the imperial prosperity not to last long, one thing is certain - a balance of power has once again shiften in Mysentria."
  liemarian.204.a: "To a Thousand years more."
  saelia_invicta_mod: "Saelia Invicta"
  desc_saelia_invicta_mod: "Victory in the League war has showed the people of Mysentria that the empire will thrive for a thousand more years."
  claim_hre_provinces_league_effect_tt: "Gain permanent claim on every imperial province owned by members of the Liemarian League."
 
  liemarian.205.t: "End of the Coalition War"
- liemarian.205.desc: "After painful and long sessions of negotiating, the major players of the conflict have finally agreed on a peace treaty and the neverending coalition war has finally reached a conclusion.\n\nThe stalemate and prolonged devastation has led both sides to agree on peace, retaining the previous status quo.\n\nWhile the treaty didn't change a single thing, the empire might not survive another conflict."
+ liemarian.205.desc: "After painful and long sessions of negotiating, the major players of the conflict have finally agreed on a peace treaty and the neverending coalition war has finally reached a conclusion.\nThe stalemate and prolonged devastation has led both sides to agree on peace, retaining the previous status quo.\nWhile the treaty didn't change a single thing, the empire might not survive another conflict."
  liemarian.205.a: "Only a matter of time until a new war breaks out."
 
  liemarian.206.t: "End of the Coalition War"
- liemarian.206.desc: "After painful and long sessions of negotiating, the major players of the conflict have finally agreed on a peace treaty and the neverending coalition war has finally reached a conclusion.\n\nDespite the hardships, Liemarian Coalition is triumphant, trying to take advantage of their victory as much as they can. Princes and duchies are being relieved of the emperor's fist and many states try to consolidate their kingdoms.\n\nWith this victory, the ancient empire has finally been put to rest, letting new states prosper on its grave."
+ liemarian.206.desc: "After painful and long sessions of negotiating, the major players of the conflict have finally agreed on a peace treaty and the neverending coalition war has finally reached a conclusion.\nDespite the hardships, Liemarian Coalition is triumphant, trying to take advantage of their victory as much as they can. Princes and duchies are being relieved of the emperor's fist and many states try to consolidate their kingdoms.\nWith this victory, the ancient empire has finally been put to rest, letting new states prosper on its grave."
  liemarian.206.a: "Let a new world rise from the ashes of the empire."
