map changes and fixes

--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -279,7 +279,7 @@
  emperor_not_granted_kingship: "Kuninstofship Rejected"
 
  kuninstof_rightful_vassalization_title: "Righftul Vassalization"
- kuninstof_rightful_vassalization_desc: "We will use our status as Kuninstof to transfer vassalage of the [From.GovernmentName] of [From.Owner.GetName] from the emperor to us.\nIf the vassalization succeeds, they will inherit our color, have greatly reduced liberty desire and no penalty to force limit from being our subject. They will lose this modifier if we leave the empire."
+ kuninstof_rightful_vassalization_desc: "We will use our status as Kuninstof to transfer vassalage of the [From.GovernmentName] of [From.Owner.GetName] from the emperor to us.\nIf the vassalization succeeds, they will inherit our color and temporarily have greatly reduced liberty desire and no penalty to force limit from being our subject. They will lose this modifier if we leave the empire."
  kuninstof_rightful_vassalization_tooltip: "We will use our status as Kuninstof to transfer vassalage of the [From.GovernmentName] of [From.Owner.GetName] from the emperor to us."
  kuninstof_rightful_vassalization_dialog: "The [This.GovernmentName] of [This.Owner.GetName] is requesting that we become their vassal. How should we respond?"
  kuninstof_loyal_vassal_mod: "Loyal Vassal"
