--- a/localisation/TD_01_Flavour_sarikullu_l_english.yml
+++ b/localisation/TD_01_Flavour_sarikullu_l_english.yml
@@ -3,7 +3,7 @@
  braissli_federation_reform_desc: "Weak and dispersed tribes of Teneran desert were only able to control the region through shared control of the regional trade routes and semi-unified government."
 
  TD_elections.2.t: "Alwdukel"
- TD_elections.2.desc: "Every time the old Elwyaëlwy passes away to the eternal hunting fields, the clans of Šarikullu gather in [Capital.GetName] in order to select [Monarch.GetHerHis] successor. The typical choice is always one of the 5 most influential clans: Makkars, Igalis, Ekrans, Zewzewians and Ebeggians which control vast majority of power and land in the federation. Each of these groups will do anything in their power to persuade the other candidates to back out or support them instead. In the year [GetYear], the victor of these diplomatic clashes was..."
+ TD_elections.2.desc: "Every time the old Elwyaëlwy passes away to the eternal hunting fields, the clans of Šarikullu gather in [Root.Capital.GetName] in order to select [Root.Monarch.GetHerHis] successor. The typical choice is always one of the 5 most influential clans: Makkars, Igalis, Ekrans, Zewzewians and Ebeggians which control vast majority of power and land in the federation. Each of these groups will do anything in their power to persuade the other candidates to back out or support them instead. In the year [GetYear], the victor of these diplomatic clashes was..."
  TD_elections.2.a: "A Makkari candidate."
  TD_elections.2.b: "An Igali candidate."
  TD_elections.2.c: "An Ekran candidate."
