sigilian religious tension

--- a/localisation/TD_01_flavour_sigilian_l_english.yml
+++ b/localisation/TD_01_flavour_sigilian_l_english.yml
@@ -23,7 +23,7 @@
  sigilian.4.t: "Argenteus Tax is Unpaid"
  sigilian.4.desc: "Argenteus Tax is the oldest and still collected tax in the saelian world. It was initially collected during the early days of the church to support building new temples and was paid exclusively in silver, thus the name. As the times progressed, the tax lost its importance and these days is just seen as a symbol of loyalty to the emperor and imperial cause. Now, our glorious nobles, decided to not pay it due to their prideful yet stupid nature. They are trying to explain their behaviour with 'bad economic situation' and 'peasants not working hard enough', but despite all of this, the clergy demands the tax to be paid. What shall we do?"
  sigilian.4.a: "Side with the nobility."
- sigilian.4.b: "Side with the emperor."
+ sigilian.4.b: "Side with the clergy."
  sigilian.4.c: "Fine, I'll pay for them."
  ## Heathen influences
  sigilian.5.t: "Heathen influences"
