Tweaks 2 and loc

--- a/localisation/TD_01_flavour_liemarian_l_english.yml
+++ b/localisation/TD_01_flavour_liemarian_l_english.yml
@@ -5,14 +5,14 @@
  liemarian.1.desc: "“The Era of Emperors must come to an end.\n\nThe true Vicarius is not one who panders to his own vanity, nor one who thrives on conflicts with neighbouring realms, nor is he chosen by four tainted tetrarchs. As the wise Liemar has said, it is the masses that possess the truest insight into the heart of a man touched by our god, the man chosen to be Episcopus Maximus.\n\nWhy must anyone suffer due to the hands of an impure man, who deceives us for his selfish power struggles against all that may defy him? The Saelian Empire has long been fractured by the failure of the Emperors, allowing war and famine to be rampant within his own lands. Our hearts know how we must move forward.\n\nLiemar has built on the reformatory work of many great men before him who have presented their grievances to the world against the false Vicarius. For too long have our ancestors been content to live in the shadow of corruption while light has been present to them for centuries. No man will ever use the mantle of Vicarius to forward his own gains ever again, for the community can discern the fruits of faith from the rot of fraud. Fiefdoms will fall. Nations will rise. United with faith against the tyranny of the false pretender.”\n\nExcerpt from “The End of an Era: Where Justice Prevails, 1639” - Frederic Conrad von Artausitz"
  liemarian.1.a: "A new age is coming to Mysentria..."
  liemarian.2.t: "Episcopus Maximus seeks land"
- liemarian.2.desc: "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+ liemarian.2.desc: "A group of Episcopal diplomats have reached our [Root.Monarch.GetTitle] with a controversial request. The newly elected Episcopus Maximus Pious has set out to establish a proper Episcopal state, with the new seat of power being [episcopate_capital.Getname]. The envoy explains that this land grant will allow the episcopate to more effectively secure Liemarian interest and bring more political independence for Episcopate."
  liemarian.2.a: "We shall grant them whatever they need."
  liemarian.2.b: "You want MY land?!"
  liemarian.2.c: "They shall grant us whatever we need. (Play as The Episcopate)"
  seat_of_episcopate: "Seat of Episcopus Maximus"
  desc_seat_of_episcopate: "This is the province from which the Episcopus Maximus himself rules over all of liemarian faith."
  liemarian.3.t: "Spread of a new faith"
- liemarian.3.desc: "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+ liemarian.3.desc: "It didn't take a long time for the new rumored heresy to reach our lands, however it appears that our population is much eager to embrace this new faith, so much so that not even missionaries are needed, with the faith spreading through trade and word of mouth. If we don't contain it soon, it might lead to a serious turmoil in our nation - maybe embracing it is more beneficial in our situation?"
  liemarian.3.a: "Maybe they are right..."
  liemarian.3.b: "This will blow over"
  liemarian.4.t: "Council of Tiepol"
@@ -141,7 +141,7 @@
 
  liamrian.100.tt: "You will be able to change your school of thought, but only to those that are already present in the world."
  liemarian.100.t: "A Matter of Faith"
- liemarian.100.desc: "REPLACE_ME"
+ liemarian.100.desc: "Everchanging nature of the Liemarian faith might seem like a drawback, however this brings us flexibility which the stagnant empire lacked. Our [Root.Monarch.GetTitle] has decided to shift a focus of the faith in our [Root.GovernmentName]. With tens of schools growing and prospering, only a handful have a strong enough presence to be a suitable candidates."
  liemarian.100.a: "Palmisianist - to return to the roots"
  liemarian.100.b: "Reinist - to cleanse the world"
  liemarian.100.c: "Angelist - to build a nation"
@@ -202,6 +202,7 @@
  desc_secular_emperor_mod: "The emperor has gave his subject a free hand on religious matters."
  desc_lessened_restrictions_mod: "The emperor has loosen the religious restrictions and granted more power to local clergy."
 
+ increase_liemarian_reformation_0.1_tt: "Increase Religious Tension by §Y0.1%§!."
  increase_liemarian_reformation_1_tt: "Increase Religious Tension by §Y1%§!."
  increase_liemarian_reformation_1.5_tt: "Increase Religious Tension by §Y1.5%§!."
  increase_liemarian_reformation_2_tt: "Increase Religious Tension by §Y2%§!."
@@ -211,6 +212,7 @@
  increase_liemarian_reformation_10_tt: "Increase Religious Tension by §Y10%§!."
  increase_liemarian_reformation_15_tt: "Increase Religious Tension by §Y15%§!."
 
+ decrease_liemarian_reformation_0.1_tt: "Decrease Religious Tension by §Y0.1%§!."
  decrease_liemarian_reformation_1_tt: "Decrease Religious Tension by §Y1%§!."
  decrease_liemarian_reformation_1.5_tt: "Decrease Religious Tension by §Y1.5%§!."
  decrease_liemarian_reformation_2_tt: "Decrease Religious Tension by §Y2%§!."
