--- a/localisation/TD_01_flavour_marstonia_l_english.yml
+++ b/localisation/TD_01_flavour_marstonia_l_english.yml
@@ -4,7 +4,7 @@
  marstonia.1.a: "Outrageous!"
  marstonia.1.b: "We can't do anything about it right now."
  marstonia.2.t: "Marstonian State Reforms"
- marstonia.2.desc: "Lorem ipsum state reforms or smth, loremeister will add something here later"
+ marstonia.2.desc: "The foundatiouns of Marstonian statehood lie on the relations between the [Root.Monarch.GetTitle] and the nobility, however the increasing trends absolutism and diplomatic monopoly of the rulers across Mysentria has led many to write works about a new potential Marstonian government. With this in mind, [Root.Monarch.GetTitle] [Root.Monarch.GetName] has sat down with his cabinet to modernize the nation."
  marstonia.2.a: "Valdnieste is a good concept, we should only limit ourselves to expanding it"
  marstonia.2.b: "We should abolish hereditary monarchy as a whole, and establish a elective monarchy!"
 
