--- a/localisation/TD_03_missions_saelian_l_english.yml
+++ b/localisation/TD_03_missions_saelian_l_english.yml
@@ -27,7 +27,7 @@
  TD_emperor_silver_tongue: "Silver Tongue"
  TD_emperor_uncontested_rule: "Uncontested Rule"
  saelian.8.t: "The Matter of Electorate"
- saelian.8.desc: "Lorem Ipsum etc"
+ saelian.8.desc: "The conflict between the Emperors and the tetrarchy is as old as the empire itself, with only few emperors being able to control it. Wise emperor [Root.Monarch.GetName] knows that unless [Root.Monarch.GetSheHe] deals with this, the electors will continue to spread discontent and diminish the imperial authority."
  saelian.8.a: "We must centralize the power in the Empire."
  saelian.8.b: "Continued cooperation is the way forward."
  saelian.8_tt: "We will decide the fate of the tetrarchy"
