fixes and tweaks

--- a/localisation/TD_01_flavour_liemarian_l_english.yml
+++ b/localisation/TD_01_flavour_liemarian_l_english.yml
@@ -203,6 +203,7 @@
  desc_lessened_restrictions_mod: "The emperor has loosen the religious restrictions and granted more power to local clergy."
 
  increase_liemarian_reformation_0.1_tt: "Increase Religious Tension by §Y0.1%§!."
+ increase_liemarian_reformation_0.5_tt: "Increase Religious Tension by §Y0.5%§!."
  increase_liemarian_reformation_1_tt: "Increase Religious Tension by §Y1%§!."
  increase_liemarian_reformation_1.5_tt: "Increase Religious Tension by §Y1.5%§!."
  increase_liemarian_reformation_2_tt: "Increase Religious Tension by §Y2%§!."
@@ -213,6 +214,7 @@
  increase_liemarian_reformation_15_tt: "Increase Religious Tension by §Y15%§!."
 
  decrease_liemarian_reformation_0.1_tt: "Decrease Religious Tension by §Y0.1%§!."
+ decrease_liemarian_reformation_0.5_tt: "Decrease Religious Tension by §Y0.5%§!."
  decrease_liemarian_reformation_1_tt: "Decrease Religious Tension by §Y1%§!."
  decrease_liemarian_reformation_1.5_tt: "Decrease Religious Tension by §Y1.5%§!."
  decrease_liemarian_reformation_2_tt: "Decrease Religious Tension by §Y2%§!."
