--- a/localisation/TD_01_flavour_liemarian_l_english.yml
+++ b/localisation/TD_01_flavour_liemarian_l_english.yml
@@ -195,6 +195,8 @@
  sigilian_bar_tt: "Sigilian Religious Tension\n---\nThis bar represents how close the Sigilian faith is to finally break to the various heresies outside of the empire. If it reaches 100%, the value will be locked and a new faith will spawn and rapidly spread in the Sigilian lands outside of the Saelian Empire.\n\nTension can be influenced through passing reforms, random events, decisions, imperial incidents or even actions taken by other non-sigilian nations. Countries with high Universalism will be less likely to take actions increasing the Tension, however Particularist nations will always try to increase it.\n---\nCurrent Tension level: §Y[REB.liemarian_reformation_var.GetValue]%§!"
 
  sigilian_button_a_tt: "Enforce the Rite"
+ sacral_efforts_mod: "Sacralizaliton Efforts"
+ desc_sacral_efforts_mod: "The emperor is trying to strengthen their sacral influence on other nations."
  sigilian_button_b_tt: "Loosen the Restrictions"
  every_sigilian_tt: "Every §YSigilian§! country barring the emperor will get the following:"
  lessened_restrictions_mod: "Loosened Restrictions"
