Blessed be His soul

--- a/localisation/TD_01_flavour_argenia_l_english.yml
+++ b/localisation/TD_01_flavour_argenia_l_english.yml
@@ -36,17 +36,17 @@
  dorchia_imperial_relations: "Imperial Relations"
  dorchia_imperial_relations_desc: "During Argenian raids on the Saelian Empire, the Emperor reached out to kings of Dorchia. And so, the Dorchean-Imperial alliance was born, based on mutual enemy of Argenia. This opened Dorchean states to the rest of the Mysentrian world, which later helped us join the Saelian Church."
 
- his_authority: "Authority"
+ his_authority: "Saletiarn the Righteous"
  his_authority_desc: "We will live under our ruler, just as humanity lives under Saletiarn."
- his_humility: "Humility"
+ his_humility: "Saletiarn the Humble"
  his_humility_desc: "There is no one in the world just as humble as Saletiarn."
- his_bravery: "Bravery"
+ his_bravery: "Saletiarn the Brave"
  his_bravery_desc: "Even when retreating, Saletiarn is the braviest man on the battlefield."
- his_kindness: "Kindness"
+ his_kindness: "Saletiarn the Merciful"
  his_kindness_desc: "Saletiarn treats his friends with respect and even enemies of Saletiarn die quickly, thanks to His mercy."
- his_generosity: "Generosity"
+ his_generosity: "Saletiarn the Generous"
  his_generosity_desc: "The gift of presence of Saletiarn is the greatest honor in the world."
- his_ambition: "Ambition"
+ his_ambition: "Saletiarn the Conqueror"
  his_ambition_desc: "The dreams of Saletiarn are just as big as the World itself."
  wirosepan_select_aspect: "Favoured Aspect of Saelius"
 
