--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -987,3 +987,4 @@
  salam_sea_area: "Salam Sea"
  darrasian_sea_area: "Darrasian Sea"
  western_sahilan_coast_area: "West Sahilan Coast"
+ yudeza_area: "Yudeza"
