--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -24,7 +24,7 @@
  RAN: "Randwerpen"
  RAN_ADJ: "Randwerpenian"
  BLO: "Bloemrijkland"
- BLO_ADJ: "bloemrijklander"
+ BLO_ADJ: "Bloemrijklander"
  END: "Endoobdorf"
  END_ADJ: "Endoobdorfer"
  LES: "Lesser Nifthem"
