colonial names + primary cultures

--- a/localisation/TD_colonial_regions_l_english.yml
+++ b/localisation/TD_colonial_regions_l_english.yml
@@ -103,6 +103,10 @@
  COLONIAL_new_oileamer_ADJ: "Oileamerian"
  COLONIAL_new_starluchsem: "New Starluchsem"
  COLONIAL_new_starluchsem_ADJ: "Starluchsemian"
+ COLONIAL_mabarqaba: "Mabarqaba"
+ COLONIAL_mabarqaba_ADJ: "Mabarqaban"
+ COLONIAL_khatay: "Khatay"
+ COLONIAL_khatay_ADJ: "Khatayan"
  COLONIAL_gross_himmelkanal: "Gross Himmelkanal"
  COLONIAL_gross_himmelkanal_ADJ: "Gross Himmelkanalan"
  COLONIAL_Root_Culture_GetName_qarabil: "[Root.GetAdjective] Qarabil"
@@ -119,6 +123,8 @@
  COLONIAL_helthonland_ADJ: "Helthonlander"
  COLONIAL_sudland: "Sudland"
  COLONIAL_sudland_ADJ: "Sudlander"
+ COLONIAL_kafras: "Kafraš"
+ COLONIAL_kafras_ADJ: "Kafraš"
  COLONIAL_Root_Culture_GetName_radoriasa: "[Root.GetAdjective] Radoriasa"
  COLONIAL_Root_Culture_GetName_radoriasa_ADJ: "[Root.GetAdjective] Radoriasan"
 
