--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1194,7 +1194,7 @@
  PROV1193: "Minorca"
  PROV1194: "Jaritha"
  PROV1195: "Panqert" #Sunset
- PROV1196: "1196"
+ PROV1196: "Njaarcaanem" #Two Brothers
  PROV1197: "Shyatohtar"
  PROV1198: "Zaothar"
  PROV1199: "Hesh"
@@ -4348,25 +4348,25 @@
  PROV4347: "Lanqal"
  PROV4348: "Dedahan" #gold
  PROV4349: "Ifaran" #caves
- PROV4350: "4350"
+ PROV4350: "Bonatefes" #pierce beach
  PROV4351: "Peräjärvi"
- PROV4352: "4352"
- PROV4353: "4353"
- PROV4354: "4354"
- PROV4355: "4355"
- PROV4356: "4356"
- PROV4357: "4357"
- PROV4358: "4358"
- PROV4359: "4359"
- PROV4360: "4360"
- PROV4361: "4361"
- PROV4362: "4362"
- PROV4363: "4363"
- PROV4364: "4364"
- PROV4365: "4365"
- PROV4366: "4366"
- PROV4367: "4367"
- PROV4368: "4368"
+ PROV4352: "Wenmaraang" #iron wall
+ PROV4353: "Suufwen" #beneath iron
+ PROV4354: "Elamtiiru" #Ilum's village
+ PROV4355: "Caanegenem" #brother's mouth
+ PROV4356: "Wentuungd" #iron hill
+ PROV4357: "Raabacadaka" #weaver village
+ PROV4358: "Naajtuungdaka" #sun hill village
+ PROV4359: "Jaamtiiru" #slave (coastal) village
+ PROV4360: "Khudaka"
+ PROV4361: "Robbetalaa" #hunt forest
+ PROV4362: "Doutatiir" #Douta land
+ PROV4363: "Ngeydekh" #elephant river
+ PROV4364: "Khorontool" #salt field
+ PROV4365: "Naajtuungd" #sun hill
+ PROV4366: "Dewala"
+ PROV4367: "Sankhalbeej" #rice bend
+ PROV4368: "Magiitje" #old market
  PROV4369: "4369"
  PROV4370: "4370"
  PROV4371: "4371"
@@ -4374,7 +4374,7 @@
  PROV4373: "4373"
  PROV4374: "4374"
  PROV4375: "4375"
- PROV4376: "4376"
+ PROV4376: "Kuraytuungd" #incense hill
  PROV4377: "Ivragan"
  PROV4378: "4378"
  PROV4379: "Danat"
@@ -4394,19 +4394,19 @@
  PROV4393: "4393"
  PROV4394: "4394"
  PROV4395: "4395"
- PROV4396: "4396"
+ PROV4396: "Ubbidaka" #open village
  PROV4397: "4397"
  PROV4398: "4398"
  PROV4399: "4399"
  PROV4400: "4400"
  PROV4401: "4401"
- PROV4402: "4402"
- PROV4403: "4403"
+ PROV4402: "Kuubdekyi" #dye rivers
+ PROV4403: "Kulbeongtir" #kulbeong land
  PROV4404: "4404"
- PROV4405: "4405"
- PROV4406: "4406"
- PROV4407: "4407"
- PROV4408: "4408"
+ PROV4405: "Hudajedal" #hudaje lodge
+ PROV4406: "Kuuraywoow" #incense dry
+ PROV4407: "Yakhtool" #bone field
+ PROV4408: "Ndiwenultaw" #rain's gift
  PROV4409: "4409"
  PROV4410: "4410"
  PROV4411: "4411"
