Yamdan Province Names

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -4370,8 +4370,8 @@
  PROV4369: "4369"
  PROV4370: "4370"
  PROV4371: "4371"
- PROV4372: "4372"
- PROV4373: "4373"
+ PROV4372: "Momahou"
+ PROV4373: "Kpachou"
  PROV4374: "4374"
  PROV4375: "4375"
  PROV4376: "Kuraytuungd" #incense hill
@@ -4381,7 +4381,7 @@
  PROV4380: "Maluxa"
  PROV4381: "Imara" #border
  PROV4382: "4382"
- PROV4383: "4383"
+ PROV4383: "Tinjsol" 
  PROV4384: "4384"
  PROV4385: "4385"
  PROV4386: "4386"
@@ -4407,10 +4407,10 @@
  PROV4406: "Kuuraywoow" #incense dry
  PROV4407: "Yakhtool" #bone field
  PROV4408: "Ndiwenultaw" #rain's gift
- PROV4409: "4409"
- PROV4410: "4410"
+ PROV4409: "Tampiir"
+ PROV4410: "Samboul" #a spice
  PROV4411: "4411"
- PROV4412: "4412"
+ PROV4412: "Fonj" #the city
  PROV4413: "4413"
  PROV4414: "4414"
  PROV4415: "Abrishram"
