--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1194,7 +1194,7 @@
  PROV1193: "Minorca"
  PROV1194: "Jaritha"
  PROV1195: "Panqert" #Sunset
- PROV1196: "Njaarcaanem" #Two Brothers
+ PROV1196: "Njarcnem" #Two Brothers
  PROV1197: "Shyatohtar"
  PROV1198: "Zaothar"
  PROV1199: "Hesh"
@@ -4350,20 +4350,20 @@
  PROV4349: "Ifaran" #caves
  PROV4350: "Bonatefes" #pierce beach
  PROV4351: "Peräjärvi"
- PROV4352: "Wenmaraang" #iron wall
+ PROV4352: "Wenmarang" #iron wall
  PROV4353: "Suufwen" #beneath iron
- PROV4354: "Elamtiiru" #Ilum's village
- PROV4355: "Caanegenem" #brother's mouth
- PROV4356: "Wentuungd" #iron hill
- PROV4357: "Raabacadaka" #weaver village
- PROV4358: "Naajtuungdaka" #sun hill village
- PROV4359: "Jaamtiiru" #slave (coastal) village
- PROV4360: "Khudaka"
- PROV4361: "Robbetalaa" #hunt forest
- PROV4362: "Doutatiir" #Douta land
+ PROV4354: "Elamtiir" #Ilum's village
+ PROV4355: "Canegnm" #brother's mouth
+ PROV4356: "Wentungd" #iron hill
+ PROV4357: "Raacadak" #weaver village
+ PROV4358: "Najtungdak" #sun hill village
+ PROV4359: "Jaamtiir" #slave (coastal) village
+ PROV4360: "Xudaka"
+ PROV4361: "Robbetal" #hunt forest
+ PROV4362: "Douta" #Douta land
  PROV4363: "Ngeydekh" #elephant river
- PROV4364: "Khorontool" #salt field
- PROV4365: "Naajtuungd" #sun hill
+ PROV4364: "Xorontool" #salt field
+ PROV4365: "Najtungd" #sun hill
  PROV4366: "Dewala"
  PROV4367: "Sankhalbeej" #rice bend
  PROV4368: "Magiitje" #old market
@@ -4374,7 +4374,7 @@
  PROV4373: "Kpachou"
  PROV4374: "4374"
  PROV4375: "4375"
- PROV4376: "Kuraytuungd" #incense hill
+ PROV4376: "Kraytungd" #incense hill
  PROV4377: "Ivragan"
  PROV4378: "4378"
  PROV4379: "Danat"
@@ -4394,19 +4394,19 @@
  PROV4393: "4393"
  PROV4394: "4394"
  PROV4395: "4395"
- PROV4396: "Ubbidaka" #open village
+ PROV4396: "Ubbidak" #open village
  PROV4397: "4397"
  PROV4398: "4398"
  PROV4399: "4399"
  PROV4400: "4400"
  PROV4401: "4401"
- PROV4402: "Kuubdekyi" #dye rivers
- PROV4403: "Kulbeongtir" #kulbeong land
+ PROV4402: "Kubdeky" #dye rivers
+ PROV4403: "Kulbeong" #kulbeong land
  PROV4404: "4404"
- PROV4405: "Hudajedal" #hudaje lodge
+ PROV4405: "Hudaje" #hudaje lodge
  PROV4406: "Kuuraywoow" #incense dry
  PROV4407: "Yakhtool" #bone field
- PROV4408: "Ndiwenultaw" #rain's gift
+ PROV4408: "Ndwentaw" #rain's gift
  PROV4409: "Tampiir"
  PROV4410: "Samboul" #a spice
  PROV4411: "4411"
