Kwaena Province Names

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -4369,7 +4369,7 @@
  PROV4368: "Magiitje" #old market
  PROV4369: "4369"
  PROV4370: "4370"
- PROV4371: "4371"
+ PROV4371: "Akyili" #far
  PROV4372: "Momahou"
  PROV4373: "Kpachou"
  PROV4374: "4374"
@@ -4409,9 +4409,9 @@
  PROV4408: "Ndwentaw" #rain's gift
  PROV4409: "Tampiir"
  PROV4410: "Samboul" #a spice
- PROV4411: "4411"
+ PROV4411: "Aosee" #harbour
  PROV4412: "Fonj" #the city
- PROV4413: "4413"
+ PROV4413: "Fifasu" #white river
  PROV4414: "4414"
  PROV4415: "Abrishram"
  PROV4416: "Darband"
@@ -4419,15 +4419,15 @@
  PROV4418: "Malagosans"
  PROV4419: "Riknisgar"
  PROV4420: "Aghmoslavetia"
- PROV4421: "4421"
- PROV4422: "4422"
- PROV4423: "4423"
- PROV4424: "4424"
- PROV4425: "4425"
- PROV4426: "4426"
- PROV4427: "4427"
- PROV4428: "4428"
- PROV4429: "4429"
+ PROV4421: "Enyobi" #not home
+ PROV4422: "Asfodau" #garrison
+ PROV4423: "Asompaos" #ivory coast
+ PROV4424: "Kwaekefe" #city of Kwaena
+ PROV4425: "Kroubepo" #high mount
+ PROV4426: "Mmafu" #hill field
+ PROV4427: "Obi" #home
+ PROV4428: "Ohye" #border
+ PROV4429: "Nekwae" #across forest
  PROV4430: "4430"
  PROV4431: "4431"
  PROV4432: "4432"
