--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -4423,7 +4423,7 @@
  PROV4422: "Asfodau" #garrison
  PROV4423: "Asompaos" #ivory coast
  PROV4424: "Kwaekefe" #city of Kwaena
- PROV4425: "Kroubepo" #high mount
+ PROV4425: "Kroubeppa" #high mount
  PROV4426: "Mmafu" #hill field
  PROV4427: "Obi" #home
  PROV4428: "Ohye" #border
