missing tetrarch events

--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -864,3 +864,16 @@
  desc_disunited_dauerschutze: "Princes now have a greater control over their Dauerschütze units."
  disunited_dauerschutze_country: "Dauerschütze Concessions"
  desc_disunited_dauerschutze_country: "Our subjects now trust us a lot more."
+
+ saelian.16.t: "An Empty Throne"
+ saelian.16.desc: "The Recent fall of Tetrarch [missing_tetrarch.GetName] has forced him to relocate their base of operation. A proposal was made to establish a new electoral capital in [potential_tetrarch_capital.GetName]. This situation gives us an upper hand on the tetrarch, now completely dependant on us."
+ saelian.16.a: "Let's Set it up."
+ saelian.16.b: "REPLACE_ME"
+ tetrarchy_subject_tt: "§TThe new subject will suffer no manpower and forcelimit penalties and you will have reduced Imperial Authority penalty, however you will NOT be able to annex it.§!"
+ tetrarchy_subject: "Tetrarch in Submission"
+ tetrarchy_subject_overlord: "'Temporary' Relocation"
+
+ saelian.17.t: "An Empty Throne"
+ saelian.17.t.desc: "The Recent fall of Tetrarch [missing_tetrarch.GetName] has forced him to relocate their base of operation. A proposal was made to establish a new electoral capital in [potential_tetrarch_capital.GetName]. While the demand is absurd, we should follow the emperor's orders."
+ saelian.17.a: "I didn't like this city anyway..."
+ saelian.17.b: "We will not give up our land to anyone!"
