--- a/localisation/TD_01_flavour_argenia_l_english.yml
+++ b/localisation/TD_01_flavour_argenia_l_english.yml
@@ -36,6 +36,7 @@
  dorchia_imperial_relations: "Imperial Relations"
  dorchia_imperial_relations_desc: "During Argenian raids on the Saelian Empire, the Emperor reached out to kings of Dorchia. And so, the Dorchean-Imperial alliance was born, based on mutual enemy of Argenia. This opened Dorchean states to the rest of the Mysentrian world, which later helped us join the Saelian Church."
 
+ #Wirosepan
  his_authority: "Saletiarn the Righteous"
  his_authority_desc: "We will live under our ruler, just as humanity lives under Saletiarn."
  his_humility: "Saletiarn the Humble"
@@ -49,6 +50,55 @@
  his_ambition: "Saletiarn the Conqueror"
  his_ambition_desc: "The dreams of Saletiarn are just as big as the World itself."
  wirosepan_select_aspect: "Favoured Aspect of Saelius"
+
+ his_authority_upgrade: "Saletiarn the Righteous Bonus"
+ his_humility_upgrade: "Saletiarn the Humble Bonus"
+ his_bravery_upgrade: "Saletiarn the Brave Bonus"
+ his_kindness_upgrade: "Saletiarn the Merciful Bonus"
+ his_generosity_upgrade: "Saletiarn the Generous Bonus"
+ his_ambition_upgrade: "Saletiarn the Conqueror Bonus"
+
+ wirosepan_blessings: "Churches of Saletiarn"
+ pick_wirosepan_blessing: "Construct a Church"
+ blessing_authority: "Church of Paramount Righteousness"
+ blessing_humility: "Church of Everlasting Humility"
+ blessing_bravery: "Church of Unshaken Bravery"
+ blessing_kindness: "Church of Boundless Mercy"
+ blessing_generosity: "Church of Selfless Generosity"
+ blessing_ambition: "Church of Relentless Ambition"
+ HOLY_SITE_800_DESC: "Duronale"
+ HOLY_SITE_109_DESC: "Wyrmegnac"
+ HOLY_SITE_760_DESC: "Baeweran"
+ HOLY_SITE_508_DESC: "Renenacht"
+ HOLY_SITE_854_DESC: "Calimigli"
+ HOLY_SITE_167_DESC: "Pariga"
+
+ holysite: "owned Holy Site"
+ duronale: "Duronale"
+ wyrmegnac: "Wyrmegnac"
+ baeweran: "Baeweran"
+ renenacht: "Renenacht"
+ calimigli: "Calimigli"
+ pariga: "Pariga"
+ authority_church: "Adds §G-5§! §YLocal Unrest§! to [GetHolySiteName]"
+ humility_church: "Adds §G+50%§! §YInstitution Spread§! to [GetHolySiteName]"
+ bravery_church: "Adds §G+50%§! §YLocal Manpower§! to [GetHolySiteName]"
+ kindness_church: "Adds §G-10%§! §YDevelopment Cost§! to [GetHolySiteName]"
+ generosity_church: "Adds §G+0.25§! §YLocal Prosperity Growth§! to [GetHolySiteName]"
+ ambition_church: "Adds §G+1§! §YPossible Number of Manufactories§! to [GetHolySiteName]"
+
+ church_of_paramount_righteousness: "Church of Paramount Righteousness"
+ church_of_paramount_righteousness: "§TIf we follow Saletiarn the Rightious, we will also gain +0.5 Yearly Prestige.§!"
+ church_of_everlasting_humility: "Church of Everlasting Humility"
+ church_of_everlasting_humility_desc: "§TIf we follow Saletiarn the Humble, we will also gain +15% Reform Progress Modifier.§!"
+ church_of_unshaken_bravery: "Church of Unshaken Bravery"
+ church_of_unshaken_bravery_desc: "§TIf we follow Saletiarn the Brave, we will also gain +1 Global Hostile Attrition.§!"
+ church_of_boundless_mercy: "Church of Boundless Mercy"
+ church_of_boundless_mercy_desc: "§TIf we follow Saletiarn the Merciful, we will also gain +1 Diplomatic Repuation.§!"
+ church_of_selfless_generosity: "Church of Selfless Generosity"
+ church_of_selfless_generosity_desc: "§TIf we follow Saletiarn the Generous, we will also gain -0.1 Inflation Reduction.§!"
+ church_of_relentless_ambition: "Church of Relentless Ambition"
+ church_of_relentless_ambition: "§TIf we follow Saletiarn the Conqueror, we will also gain -2.5 Years of Seperatism.§!"
 
  argenia.1.t: "Death of Sexbald"
  argenia.1.desc: "The sad passing of the late King Sexbald of Wyrmegnac has caused unrest among the nobility who now wish to grant the crown of Argenia to [ANI.monarch.GetName]."
