Jambakan Prov Names + Capital Moved

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -4344,7 +4344,7 @@
  PROV4343: "Nasndwa"
  PROV4344: "Fupni"
  PROV4345: "Ilmuhirjan"
- PROV4346: "4346"
+ PROV4346: "Azgur"
  PROV4347: "Lanqal"
  PROV4348: "Dedahan" #gold
  PROV4349: "Ifaran" #caves
@@ -4367,42 +4367,42 @@
  PROV4366: "Dewala"
  PROV4367: "Sankhalbeej" #rice bend
  PROV4368: "Magiitje" #old market
- PROV4369: "4369"
- PROV4370: "4370"
+ PROV4369: "Lunjo" #dawn town
+ PROV4370: "Banoo"
  PROV4371: "Akyili" #far
  PROV4372: "Momahou"
  PROV4373: "Kpachou"
- PROV4374: "4374"
- PROV4375: "4375"
+ PROV4374: "Sanoontu" #Sanooma crossing
+ PROV4375: "Kyaanjaa" #unfriendly front
  PROV4376: "Kraytungd" #incense hill
  PROV4377: "Ivragan"
- PROV4378: "4378"
+ PROV4378: "Falasi" #curve
  PROV4379: "Danat"
  PROV4380: "Maluxa"
  PROV4381: "Imara" #border
- PROV4382: "4382"
+ PROV4382: "Senerbaa" #ploughed river
  PROV4383: "Tinjsol" 
- PROV4384: "4384"
- PROV4385: "4385"
- PROV4386: "4386"
- PROV4387: "4387"
- PROV4388: "4388"
- PROV4389: "4389"
+ PROV4384: "Njamoo" #field
+ PROV4385: "Kiitebunj" #Tribunal ##I have ideas - Snee##
+ PROV4386: "Saalmaani" #Saalbjon Rice
+ PROV4387: "Lijbalnj" #west ridge
+ PROV4388: "Suboyoo" #fall
+ PROV4389: "Oorafee" #Gold farm
  PROV4390: "Maitojärvi"
- PROV4391: "4391"
- PROV4392: "4392"
- PROV4393: "4393"
- PROV4394: "4394"
- PROV4395: "4395"
+ PROV4391: "Saalbajon"
+ PROV4392: "Tibalnj" #east ridge
+ PROV4393: "Baabasa" #termite village
+ PROV4394: "Jiyeroo" #glass lodge
+ PROV4395: "Janjabaa" #high river
  PROV4396: "Ubbidak" #open village
- PROV4397: "4397"
- PROV4398: "4398"
- PROV4399: "4399"
- PROV4400: "4400"
- PROV4401: "4401"
+ PROV4397: "Njaarmaa" #dry one
+ PROV4398: "Tanka"
+ PROV4399: "Batupan"
+ PROV4400: "Elaamtoom" #Ilum's pass
+ PROV4401: "Tenjin"
  PROV4402: "Kubdeky" #dye rivers
  PROV4403: "Kulbeong" #kulbeong land
- PROV4404: "4404"
+ PROV4404: "Bayoosa" #cloth
  PROV4405: "Hudaje" #hudaje lodge
  PROV4406: "Kuuraywoow" #incense dry
  PROV4407: "Yakhtool" #bone field
